[metadata]
name = lightning-la
version = attr: lightning.__version__
author = la
author_email = 17845743757@qq.com
description = A socket-based lightly server framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/labo-China/lightning
project_urls =
    Home Page = https://github.com/labo-China/lightning
    Bug Tracker = https://github.com/labo-China/lightning/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src